<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Activity -->
    <string name="app_name">ChatApp</string>
    <!-- string name="phonenum_tv_text">Phone number: </string -->
    <string name="send_button_text">Send</string>
    <string name="input_ET_hint">Input message here</string>
    <string name="output_ET_hint">Messages</string>
    <string name="action_settings">Settings</string>
    <string name="connect_to_network_menu">Connect to network</string>
    <string name="edit_allowed_channels_menu">Edit allowed channels</string>
    <string name="add_SMS_contact_menu">Add SMS contact</string>
    <string name="start_conversation_menu">Start conversation</string>
    <string name="scan_for_bt_devices_menu">Scan for bt devices</string>
    <string name="ensure_bt_discoverable_menu">Make bt discoverable</string>
    <string name="convo_title">Title</string>
    <string name="not_connected">Not connected</string>
    <string name="feature_unavailable">Feature not yet available</string>

    <!-- Add SMS Contact Activity -->
    <string name="title_activity_add_smscontact">Add SMS Contact</string>
    <string name="phonenum_ET_hint">09xxxxxxxxx</string>
    <string name="add_contact_button_text">Add</string>

    <!-- Choose Channels Activity -->
    <string name="title_activity_choose_channels">Allowed Channels</string>
    <string name="bluetooth_checkbox">Bluetooth</string>
    <string name="sms_checkbox">SMS</string>
    <string name="wifi_checkbox">WiFi</string>

    <!-- BT Device List Activity -->
    <string name="title_activity_bt_device_list">BT devices</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <!-- Input Username -->
    <string name="title_activity_input_username">Input Username</string>
    <string name="save_username">Save</string>

</resources>
