<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chat_app.ChooseChannelsActivity" >

    <CheckBox
        android:id="@+id/bluetoothCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onCheckboxClicked"
        android:text="@string/bluetooth_checkbox" />

    <CheckBox
        android:id="@+id/smsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bluetoothCheckBox"
        android:onClick="onCheckboxClicked"
        android:text="@string/sms_checkbox" />

    <CheckBox
        android:id="@+id/wifiCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/smsCheckBox"
        android:onClick="onCheckboxClicked"
        android:text="@string/wifi_checkbox" />

</RelativeLayout>
