<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chat_app.MainActivity" >

    <!-- EditText
        android:id="@+id/outputET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/convoTitleTV"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="clip_vertical"
        android:hint="@string/output_ET_hint"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" /-->

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/send_button_text" />

    <EditText
        android:id="@+id/inputET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/sendButton"
        android:layout_toStartOf="@+id/sendButton"
        android:layout_toLeftOf="@+id/sendButton"
        android:ems="10"
        android:hint="@string/input_ET_hint"
        android:inputType="textMultiLine" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/convoTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/receiverIdET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/convo_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/outputListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendButton"
        android:layout_alignLeft="@+id/convoTitleTV"
        android:layout_below="@+id/convoTitleTV" >

    </ListView>

    <EditText
        android:id="@+id/receiverIdET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="Send message to" />

</RelativeLayout>
